--- a/tailscale/mealie/docker-compose.yml
+++ b/tailscale/mealie/docker-compose.yml
@@ -6,14 +6,14 @@ services:
     container_name: ts-mealie
     hostname: mealie
     environment:
-      - TS_AUTHKEY=tskey-client-kwLoXj6CNTRL-vCLN9Ab8QYYoLSEM98riXYLnfmtej6Lh?ephemeral=false
-      - "TS_EXTRA_ARGS=--advertise-tags=tag:container --reset"
+      - TS_AUTHKEY=tskey-auth-kyzXKM4Gou11CNTRL-xjRAuo2XWjhcmC6HPLpvjh3r6jkGhk4oY?ephemeral=false
+      #- "TS_EXTRA_ARGS=--advertise-tags=tag:container --reset"
       - TS_SERVE_CONFIG=/config/mealie.json
       - TS_STATE_DIR=/var/lib/tailscale
       - TS_USERSPACE=false
     volumes:
-      - ${PWD}/state:/var/lib/tailscale
-      - ${PWD}/config:/config
+      - /opt/docker/ts-mealie/state:/var/lib/tailscale
+      - /opt/docker/ts-mealie/config:/config
     devices:
       - /dev/net/tun:/dev/net/tun
     cap_add:
@@ -27,7 +27,7 @@ services:
     depends_on:
       - ts-mealie
     volumes:
-      - mealie-data:/app/data
+      - /opt/docker/mealie/mealie-data:/app/data
     environment:
       - ALLOW_SIGNUP=true
     restart: unless-stopped
